--- a/local-server/build.gradle
+++ b/local-server/build.gradle
@@ -40,6 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
-
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
